===============================================================================
=                                                          Change Log                                                                                              =
===============================================================================

2.2.34
=====

Feature:

125 	Compare with other View ( unix only).

Bugs:

#366 Better fault message
#359 eclipse UI frozen after changing config spec
#360 Unable to hijack files (Eclipse 4.1) 

2.2.33
=====

Bugs:

#362 exetrnel comapre not working after updating to latest plugin release.
#364 SingleProcess timed out! Process will be restarted! 
#365 An internal error occurred during: "Refreshing ClearCase Resource States". 


Features:

#120 Add Capability To Label Files Upon Check-In 

2.2.32
=====

Bugs:

 #357 java.lang.ClassNotFoundException: net.sourceforge.eclipseccase.views.ActivitiesView .
 #361 select activity name while check out file from eclipse 

Features:
#120 Add Capability To Label Files Upon Check-In 

Patch:

#12 Add Compare with other View functionality ( Thanks to M. Overdijk).

2.2.31
====
Bugs:
#350 Compare with Predecessor not working with BeyondCompare 
#349 Using BeyondCompare blocks Eclipse
#356 Compare selected versions always uses LATEST instead of selected version


2.2.30
=====

Bugs:

#349 Using BeyondCompare blocks Eclipse 
#350 Compare with Predecessor not working with BeyondCompare 
#352 Renaming a file/folder does not work on first attempt 

2.2.29
=====

Bugs:

3036429 	Timeout problems with long running cleartool process

Feature:

3604261 	Add filepath to checkout dialog


2.2.28
=====

Bugs:

3600131 	Saving from internal compare view saves the wrong version
3600106 	Support for BeyondCompare diff tool

2.2.27
=====

Feature:

3573773 	Get rid of manual prompt for vob location
3592132 	Prompt user about checkout of dir during refactoring