@@ -8,6 +8,7 @@
 Feature:
 
 125 	Compare with other View ( unix only).
+122 Uncheckout unmodified files when checking in 
 
 Bugs:
 
